sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:11: error: ')' expected but $XMLSTART$< found.
	} while (i <getNombreValeurs())
                   ^AlgGnomeSort:11: error: ';' expected but ')' found.
	} while (i <getNombreValeurs())
                                      ^